# grit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pt.md  README.ru.md  README.zh.md
examples/: 01-basic-workflow.sh  02-parallel-agents.sh  03-session-pr.sh  04-s3-backend.sh  05-claude-code-integration.sh  06-monitoring.sh
src/: config.rs  main.rs
src/cli/: mod.rs
src/db/: lock_store.rs  mod.rs  s3_store.rs  sqlite_store.rs
src/git/: mod.rs
src/parser/: mod.rs
src/room/: mod.rs
test-projects/pi-calc/backend/: Cargo.toml
test-projects/pi-calc/backend/src/: algorithms.rs  handlers.rs  main.rs  precision.rs  state.rs
test-projects/pi-calc/frontend/: index.html  package.json  tsconfig.json
test-projects/pi-calc/frontend/src/: App.tsx  index.tsx
test-projects/pi-calc/frontend/src/api/: client.ts
test-projects/pi-calc/frontend/src/components/: AlgorithmPicker.tsx  Comparison.tsx  Convergence.tsx  PiDisplay.tsx
test-projects/pi-calc/frontend/src/utils/: format.ts  math.ts
test-projects/py-ml/: pyproject.toml
test-projects/py-ml/src/: features.py  model.py  pipeline.py  utils.py
test-projects/rust-service/: Cargo.toml
test-projects/rust-service/src/: auth.rs  config.rs  handler.rs  main.rs  storage.rs
test-projects/ts-api/: package.json
test-projects/ts-api/src/: api.ts  auth.ts  db.ts  middleware.ts  utils.ts
tests/: bench_parallel.sh  bench_sweep.sh  benchmark.sh  claude_agents_test.sh  gen_graph.py  harness.sh
