[package]
name = "pi-calc-api"
edition = "2021"
version = "0.1.0"
description = "HTTP API for calculating pi using various algorithms"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
